test/sema/s28/fail_unknown_target.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/sema/s28/fail_unknown_target.nsl — S28 (lang.ebnf:986) fail
// variant. `first_state` names an identifier that is NOT a
// state_name in the enclosing proc's list — violates S28.
//
// Frozen diagnostic per `contracts/diagnostic-string.contract.md`:
//   'first_state' must reference a 'state_name' declared in the enclosing 'proc' (S28)
//
// **Phase 4a TDD red state**: no S28 checker exists; FAILS until
// Phase 4b T063.

// RUN: not %nslc -emit=ast %s 2>&1 | FileCheck %s

module m_fail {
  proc_name p;
  proc p {
    state_name s1;
    first_state ghost;
    state s1 { }
  }
}

// CHECK: error: 'first_state' must reference a 'state_name' declared in the enclosing 'proc' (S28)
